--- a/pytorch.ipynb
+++ b/pytorch.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMo6Y6avXeNlwEM0hkP4nrx",
+      "authorship_tag": "ABX9TyPRHY04X0impVC9RL4POHsh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,10 +36,41 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "###Tensors\n",
+        "Tensors are any numerical interpretation of an input like the numerical representation of an Image"
+      ],
+      "metadata": {
+        "id": "IXGh0bvmNa5P"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "H3u4seRH4Q6b"
+        "id": "H3u4seRH4Q6b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5947d20d-d792-4849-f92a-200a3a42e5df"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "fatal: not a git repository (or any of the parent directories): .git\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "fOmBHvE1SftD"
       },
       "execution_count": null,
       "outputs": []
